# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
advent_of_code/commons/: tools.py
advent_of_code/year_2015/day_01/: solution.py  test_solution.py
advent_of_code/year_2015/day_02/: solution.py  test_solution.py
advent_of_code/year_2015/day_03/: solution.py  test_solution.py
advent_of_code/year_2015/day_04/: solution.py  test_solution.py
advent_of_code/year_2015/day_05/: solution.py  test_solution.py
advent_of_code/year_2016/day_01/: solution.py  test_solution.py
advent_of_code/year_2016/day_02/: solution.py  test_solution.py
advent_of_code/year_2016/day_03/: solution.py  test_solution.py
advent_of_code/year_2016/day_04/: solution.py  test_solution.py
advent_of_code/year_2016/day_05/: solution.py  test_solution.py
advent_of_code/year_2017/day_01/: solution.py  test_solution.py
advent_of_code/year_2017/day_02/: solution.py  test_solution.py
advent_of_code/year_2017/day_03/: solution.py  test_solution.py
advent_of_code/year_2017/day_04/: solution.py  test_solution.py
advent_of_code/year_2017/day_05/: solution.py  test_solution.py
advent_of_code/year_2017/day_06/: solution.py  test_solution.py
advent_of_code/year_2018/day_01/: solution.py  test_solution.py
advent_of_code/year_2018/day_02/: solution.py  test_solution.py
advent_of_code/year_2018/day_03/: solution.py  test_solution.py
advent_of_code/year_2018/day_04/: solution.py  test_solution.py
advent_of_code/year_2018/day_05/: solution.py  test_solution.py
(+52 files in other folders)
